compiler/typ/tests/fixtures/diagnostics/0213_adt_record_pattern_annotation_mismatch_08.ml.infer.expected
File "0213_adt_record_pattern_annotation_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0213_adt_record_pattern_annotation_mismatch_08 is not a valid module name.

File "0213_adt_record_pattern_annotation_mismatch_08.ml", line 2, characters 14-28:
2 | let { score = (theta : bool); live = other_theta } =
                  ^^^^^^^^^^^^^^
Error: This pattern matches values of type bool
       but a pattern was expected which matches values of type int
